force-app/main/default/objects/ShareableObjects__mdt/ShareableObjects__mdt.object-meta.xml
<CustomObject>
    <label>ShareableObjects</label>
    <pluralLabel>ShareableObjects</pluralLabel>
</CustomObject>