force-app/main/default/objects/ShareableObjects__mdt/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>