force-app/main/default/objects/ShareableObjects__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if we need to provide Sharing to the object</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>