force-app/main/default/objects/ShareableObjects__mdt/fields/Parent_Relationship_Path__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Path__c</fullName>
    <label>Parent_Relationship_Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>