force-app/main/default/objects/ShareableObjects__mdt/fields/Row_Cause__c.field-meta.xml
<CustomField>
    <fullName>Row_Cause__c</fullName>
    <label>Row_Cause</label>
    <length>30</length>
    <type>Text</type>
</CustomField>