force-app/main/default/objects/ShareableObjects__mdt/fields/Share_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Share_Object_API_Name__c</fullName>
    <label>Share_Object_API_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>