force-app/main/default/objects/ShareableObjects__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyLF__Client__c</fullName>
                <default>true</default>
                <label>SymphonyLF__Client__c</label>
            </value>
            <value>
                <fullName>SymphonyLF__Patent__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Trademark__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Design__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Copyright__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Agreement_Contract__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Dispute_Opposition__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Patent_Family__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Design_Family__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Mark__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>